--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,4 @@
-spring.application.name=microservice
-
+springdoc.swagger-ui.path=/swagger-ui.html
 
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
