--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,16 @@
 springdoc.swagger-ui.path=/swagger-ui.html
 
+# Database connection
+spring.datasource.url=jdbc:mysql://localhost:3306/microservice
+spring.datasource.username=root
+spring.datasource.password=12@Rahul
+
+# JPA settings
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.format_sql=true
+
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
